# mini-ledger

./: .env.example  .env.test  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  ruff.toml
app/: main.py
app/api/: __init__.py  exceptions.py  schemas.py
app/api/merchants/: __init__.py  router.py  schemas.py
app/api/transfers/: __init__.py  router.py  schemas.py
app/domain/: balances.py  base.py  merchants.py  transfers.py
app/infra/: config.py  logging.py
app/infra/db/: connection.py  utils.py
app/infra/db/alembic/: env.py
app/infra/db/alembic/versions/: 0c03a7d83c23_add_uq_index_on_merchants_name.py  2cb327187492_add_currency_to_tranfers.py  3e299df8011c_add_amount_to_balance_table.py  6f12baf6b566_add_idempotency_ket_to_transfers.py  c2e083371ca9_create_base_tables.py  ee579c370e7b_edit_amount_float.py
app/infra/db/models/: __init__.py  balances.py  merchants.py  transfers.py
app/infra/db/repos/: balances.py  base.py  exceptions.py  merchants.py  transfers.py
app/infra/redis/: connection.py  lock.py
app/logic/: factories.py  utils.py
app/logic/balances/: exceptions.py  service.py
app/logic/merchants/: exceptions.py  service.py
app/logic/transfers/: exceptions.py  models.py  service.py
tests/: conftest.py  test_balances.py  test_merchants.py  test_transfers.py
